syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/services/disks/protos/create_disk_params.proto";
import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateDiskFromSnapshotRequest {
    reserved 3, 4, 5;

    string SrcSnapshotId = 1;
    CreateDiskParams Params = 2;
}

message CreateDiskFromSnapshotTaskState {
    reserved 2;

    string DataplaneTaskId = 3;
    string SelectedCellId = 4;
}
